[gd_scene load_steps=15 format=3 uid="uid://bsexu6wkiip2s"]

[ext_resource type="Script" path="res://Menus/Menu.gd" id="1_r3ldo"]
[ext_resource type="Texture2D" uid="uid://1s7xt40clgo4" path="res://Images/spaceship.jpg" id="2_j10h5"]
[ext_resource type="FontFile" uid="uid://b5u1de5es7tka" path="res://font/astro/astro.ttf" id="3_8aqs1"]
[ext_resource type="FontFile" uid="uid://dsgikwashy5js" path="res://font/Press_Start_2P/PressStart2P-Regular.ttf" id="4_6pfeh"]
[ext_resource type="FontFile" uid="uid://vfqy1hrv7kew" path="res://font/Terano-Font/Terano Bold.ttf" id="5_lhby4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uolwt"]
bg_color = Color(0.6, 0.6, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do203"]
bg_color = Color(0.788235, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0hd3d"]
font = ExtResource("4_6pfeh")
font_size = 70
font_color = Color(0, 0.952941, 1, 1)
shadow_color = Color(0.266667, 0.223529, 0.843137, 0.760784)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbhni"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drwtc"]
bg_color = Color(0.427451, 0.34902, 0.984314, 1)

[sub_resource type="GDScript" id="GDScript_h2cyv"]
script/source = "extends Button


"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p26sk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0yaj"]
bg_color = Color(0, 0.639216, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqfh5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r3ldo")

[node name="1381046-lightyear-2022-buzz-lightyear-movie-2022-movie" type="Sprite2D" parent="."]
position = Vector2(575.5, 321)
scale = Vector2(2.24805, 1.25391)
texture = ExtResource("2_j10h5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 849.0
color = Color(0, 0, 0, 0.682353)

[node name="VBoxContainer" type="Panel" parent="."]
layout_mode = 1
offset_left = 403.0
offset_top = 274.0
offset_right = 712.0
offset_bottom = 387.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_right = 309.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("3_8aqs1")
theme_override_styles/normal = SubResource("StyleBoxFlat_uolwt")
text = "Jouer"

[node name="QuitButtons" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 52.0
offset_right = 309.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("3_8aqs1")
theme_override_styles/normal = SubResource("StyleBoxFlat_do203")
text = "Quitter"

[node name="titre" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 57.0
offset_right = 1072.0
offset_bottom = 158.0
text = "Space Cruiser"
label_settings = SubResource("LabelSettings_0hd3d")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 508.0
offset_right = 403.0
offset_bottom = 554.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_8aqs1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_nbhni")
theme_override_styles/hover = SubResource("StyleBoxFlat_drwtc")
text = "Musique suivante"
script = SubResource("GDScript_h2cyv")

[node name="Musique" type="AudioStreamPlayer" parent="."]

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 574.0
offset_right = 328.0
offset_bottom = 612.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_lhby4")
theme_override_font_sizes/font_size = 26
text = "Musique "

[node name="Music" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 315.0
offset_top = 574.0
offset_right = 367.0
offset_bottom = 612.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_lhby4")
theme_override_font_sizes/font_size = 26

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 791.0
offset_top = 508.0
offset_right = 1093.0
offset_bottom = 574.0
theme_override_fonts/font = ExtResource("4_6pfeh")
theme_override_styles/normal = SubResource("StyleBoxFlat_p26sk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0yaj")
text = "Activer souris"
alignment = 1

[node name="ParcoursSuivant" type="Button" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 158.0
offset_right = 391.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("3_8aqs1")
theme_override_styles/normal = SubResource("StyleBoxFlat_jqfh5")
text = "PARCOURS SUIVANT
"

[node name="Parcours" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 70.0
offset_top = 219.0
offset_right = 110.0
offset_bottom = 242.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButtons" to="." method="_on_quit_buttons_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_musique_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="ParcoursSuivant" to="." method="_on_parcours_suivant_pressed"]
